fix: Page creation, form save z-index, and setting button js error.

--- a/assets/dashboard/stylesheets/_forms.scss
+++ b/assets/dashboard/stylesheets/_forms.scss
@@ -65,6 +65,7 @@
       bottom: 0;
       padding: 1.2rem 0;
       background: white;
+      z-index: 999;
     }
 
     &.inline {
